--- a/fe/src/formula-editor/formula-editor.component.html
+++ b/fe/src/formula-editor/formula-editor.component.html
@@ -1,8 +1,6 @@
 <div class="formula-code-editor d-flex">
     <div style="margin: 5px 5px 0 5px;">
-      <textarea class="editor-textarea" 
-        disabled
-        spellcheck="false"></textarea>
-      <div class="editor-formatted-overlay" data-frmdb-value="html::ftext"></div>
-    </div>
+        <textarea class="editor-textarea" readonly spellcheck="false"></textarea>
+        <div class="editor-formatted-overlay" data-frmdb-value="html::ftext"></div>
+      </div>
 </div>
