--- a/fe/src/db-editor/db-editor.component.html
+++ b/fe/src/db-editor/db-editor.component.html
@@ -1,43 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </div>
-</nav>
 <div id="db-left-panel">
+    <div class="header">
+        <a href="#" class="text-secondary">Tables</a>
+
+        <div class="btn-group responsive-btns mr-4 float-right" role="group">
+            <button class="btn btn-link btn-sm" title="New file" id="new-file-btn" data-vvveb-action="newPage" data-vvveb-shortcut="">
+                <i class="la la-file"></i> <small>New table</small>
+            </button>
+        </div>
+    </div>
     <frmdb-v-nav></frmdb-v-nav>
 </div>
 <div id="db-main">
-    <frmdb-data-grid table_name="N/A"></frmdb-data-grid>
+    <frmdb-data-grid table_name="N/A" no_floating_filter="true"></frmdb-data-grid>
 </div>
