--- a/fe/src/db-editor/db-editor.component.scss
+++ b/fe/src/db-editor/db-editor.component.scss
@@ -2,7 +2,7 @@
     --db-navbar-height: 0px;
 }
 
-.header {
+#db-left-panel .header {
     font-size: 11px;
     font-weight: 600;
     height: 2rem;
@@ -57,4 +57,8 @@ frmdb-v-nav {
 
 .tree ol li > a {
     cursor: pointer;
+}
+
+.drag-elements .header .nav.nav-tabs .nav-item .nav-link {
+    padding: 5px 0 5px 0;
 }
