--- a/fe/src/data-grid/data-grid-tools.component.html
+++ b/fe/src/data-grid/data-grid-tools.component.html
@@ -1,3 +1,9 @@
-<button class="excel-export">Export Excel</button>
-<button class="add-row">Add</button>
-<button class="delete-row">Delete</button>
+<link href="css/editor.css" rel="stylesheet">
+
+<div class="list-group">
+    <button class="add-row list-group-item list-group-item-action"><i class="la la-plus-circle"></i> Add Row</button>
+    <button class="delete-row list-group-item list-group-item-action"><i class="la la-minus-circle"></i> Delete Row</button>
+    <button class="add-row list-group-item list-group-item-action"><i class="la la-plus-circle"></i> Add Column</button>
+    <button class="delete-row list-group-item list-group-item-action"><i class="la la-minus-circle"></i> Delete Column</button>
+    <button class="excel-export list-group-item list-group-item-action"><i class="la la-file-excel-o"></i> Export Excel</button>
+</div>
