setup html editor, toggles over the db-editor

--- a/fe/src/formula-editor/formula-editor.component.html
+++ b/fe/src/formula-editor/formula-editor.component.html
@@ -1,6 +1,6 @@
 <div class="formula-code-editor d-flex">
     <button id="toggle-formula-editor" class="btn btn-light p-1" title="Formula Editor">
-        <i class="la la-facebook-square"></i>
+        <img src="img/frmdb-icon.png" alt="Edit Formula" />
     </button>  
     <div class="editor">
       <textarea class="editor-textarea" readonly spellcheck="false"></textarea>
