--- a/fe/src/db-editor/db-editor.component.html
+++ b/fe/src/db-editor/db-editor.component.html
@@ -3,7 +3,7 @@
         <a href="#" class="text-secondary">Tables</a>
 
         <div class="btn-group responsive-btns mr-4 float-right" role="group">
-            <button class="btn btn-link btn-sm" title="New file" id="new-file-btn" data-vvveb-action="newPage" data-vvveb-shortcut="">
+            <button class="btn btn-link btn-sm" title="New Table" id="new-table-btn">
                 <i class="la la-file"></i> <small>New table</small>
             </button>
         </div>
