--- a/fe/src/db-editor/db-editor.component.html
+++ b/fe/src/db-editor/db-editor.component.html
@@ -4,7 +4,7 @@
 
         <div class="btn-group responsive-btns mr-4 float-right" role="group">
             <button class="btn btn-link btn-sm" title="New Table" id="new-table-btn">
-                <i class="la la-file"></i> <small>New table</small>
+                <i class="la la-table"></i> <small>New table</small>
             </button>
         </div>
     </div>
