--- a/fe/src/autocomplete/autocomplete.component.html
+++ b/fe/src/autocomplete/autocomplete.component.html
@@ -3,14 +3,14 @@
         <table class="table table-striped table-sm">
             <thead>
                 <tr>
-                    <th data-frmdb-foreach="relatedControls[]" data-frmdb-value="::relatedControls[].ref_property_name" 
+                    <th data-frmdb-table="relatedControls[]" data-frmdb-value="::relatedControls[].ref_property_name" 
                         class="border-top-0">
                     </th>
                 </tr>
             </thead>
             <tbody>
-                <tr data-frmdb-foreach="options[]" data-frmdb-attr="class.selected::options[]._isSelected">
-                    <td data-frmdb-foreach="options[]._relatedControls[]"
+                <tr data-frmdb-table="options[]" data-frmdb-attr="class.selected::options[]._isSelected">
+                    <td data-frmdb-table="options[]._relatedControls[]"
                         data-frmdb-value="html:options[]:options[]._relatedControls[].ref_property_name">
                     </td>
                 </tr>
