--- a/fe/src/db-editor/db-editor.component.scss
+++ b/fe/src/db-editor/db-editor.component.scss
@@ -2,22 +2,6 @@
     --db-navbar-height: 0px;
 }
 
-#db-left-panel .header {
-    font-size: 11px;
-    font-weight: 600;
-    height: 2rem;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    line-height: 2rem;
-    text-align: left;
-    padding-left: 1rem;
-    border-bottom: 1px solid #ddd;
-    margin-bottom: 0rem;
-    padding: 0.0rem 0.5rem;
-    padding: 0rem 0rem 0.5rem 1rem;    
-}
-
 frmdb-db-editor.preview {
     display: none;
 }
@@ -26,7 +10,7 @@ frmdb-db-editor {
     height: calc(var(--db-panel-height) - var(--db-navbar-height)); 
     position: fixed; 
     top: 0;
-    left: 0;
+    left: var(--builder-left-panel-width);
     display: flex;
     // border-bottom: 4px solid var(--primary);
 }
@@ -46,13 +30,8 @@ frmdb-v-nav {
     padding: 0; width: 32px; height: 32px; border-radius: 30%;
 }
 
-#db-left-panel { 
-    width: var(--builder-left-panel-width);
-}
 #db-main { 
     width: calc( 100vw - var(--builder-left-panel-width)); 
-}
-#db-left-panel, #db-main {
     margin-top: var(--db-navbar-height); 
     background-color: white; 
     z-index: 9456;
