--- a/vvvebjs/scss/_builder.scss
+++ b/vvvebjs/scss/_builder.scss
@@ -23,7 +23,7 @@ $builder-border-color: #ddd !default;
 $builder-left-panel-width:300px !default;
 $builder-right-panel-width:300px !default;
 $builder-canvas-margin:0px !default;
-$builder-filemanager-height:200px !default;
+$builder-filemanager-height:250px !default;
 $drag-items-tabs-height:90px !default;
 $builder-background-color: #4285f4 !default;
 
@@ -85,14 +85,14 @@ $font-size-base: .875rem;
 }
 
 @mixin block-list-element() {
-    width: 90%;
-    height: 180px;
+    width: 80%;
+    height: 80px;
     text-align: center;
     font-weight: normal;
     font-size: 11px;
     color: #000;
     background-repeat: no-repeat;
-    padding-top: 150px;
+    padding-top: 60px;
     margin-bottom: 14px;
 
     border-color: #ddd;
@@ -222,7 +222,7 @@ body {
         height: 100%;
         max-height: 100%;
 
-        #filemanager {
+        #filemanager,#components-tree {
             height: $builder-filemanager-height;
             width: $builder-right-panel-width + 15;
             height: var(--builder-filemanager-height);
