--- a/fe/src/data-grid/data-grid.component.scss
+++ b/fe/src/data-grid/data-grid.component.scss
@@ -4,6 +4,8 @@
  */
 
 
+@import "../../../vvvebjs/scss/line-awesome";
+@import "../../../vvvebjs/scss/bootstrap";
 @import "~ag-grid-community/dist/styles/ag-grid";
 @import "~ag-grid-community/dist/styles/ag-theme-balham";
 
