--- a/vvvebjs/scss/_builder.scss
+++ b/vvvebjs/scss/_builder.scss
@@ -186,6 +186,10 @@ body {
 
 #vvveb-builder {
 
+    #data-grid {
+        margin-left: var(--builder-left-panel-width);
+    }
+
     // panels
     #left-panel,
     #right-panel {
