#171 more work on page saving

--- a/fe/src/formula-editor/formula-editor.component.html
+++ b/fe/src/formula-editor/formula-editor.component.html
@@ -1,7 +1,14 @@
 <div class="formula-code-editor d-flex">
-    <button id="toggle-formula-editor" class="btn btn-light p-1" title="Formula Editor">
-        <img src="img/frmdb-icon.png" alt="Edit Formula" />
-    </button>  
+    <button id="toggle-formula-editor" class="btn btn-secondary p-1" 
+        style="
+            background-image: url('http://localhost:8081/formuladb/img/fx_icon.png'); 
+            background-size: 22px 32px;
+            background-repeat: no-repeat;
+            background-position: center; 
+        " 
+        title="Formula Editor">
+        &nbsp;&nbsp;&nbsp;
+    </button>
     <div class="editor">
       <textarea class="editor-textarea" readonly spellcheck="false"></textarea>
       <div class="editor-formatted-overlay"></div>
