--- a/fe/src/formula-editor/formula-editor.component.html
+++ b/fe/src/formula-editor/formula-editor.component.html
@@ -1,7 +1,7 @@
 <div class="formula-code-editor d-flex">
     <button id="toggle-formula-editor" class="btn btn-secondary p-1" 
         style="
-            background-image: url('http://localhost:8081/formuladb/img/fx_icon.png'); 
+            background-image: url('/formuladb/img/fx_icon.png'); 
             background-size: 22px 32px;
             background-repeat: no-repeat;
             background-position: center; 
