added data binding attributes in the Content tab, General section

--- a/vvvebjs/scss/editor.scss
+++ b/vvvebjs/scss/editor.scss
@@ -34,6 +34,11 @@ $custom-select-padding-y: .4rem;
 
 $input-height: default;
 
+$spacer: 0.5rem !default;
+$grid-gutter-width: 16px !default;
+$form-group-margin-bottom: 0.5rem !default;
+
+
 @import "line-awesome";
 @import "bootstrap";
 @import "builder";
