--- a/fe/src/data-grid/data-grid-tools.component.html
+++ b/fe/src/data-grid/data-grid-tools.component.html
@@ -17,7 +17,8 @@
                 <li class="nav-item"><a href="#" class="nav-link add-column-to-table-btn "><i class="la la-plus-square"></i> Add Column</a></li>
                 <li class="nav-divider"></li>
                 <li class="nav-item"><a href="#" class="nav-link add-row "><i class="la la-plus-circle"></i> Add Row</a></li>
-                <li class="nav-item"><a href="#" class="nav-link delete-row "><i class="la la-minus-circle"></i> Delete Row</a></li>
+                <li class="nav-item"><a href="#" class="nav-link clone-row "><i class="la la-clone"></i> Clone Row</a></li>
+                <li class="nav-item"><a href="#" class="nav-link delete-row "><i class="la la-trash"></i> Delete Row</a></li>
                 <li class="nav-divider"></li>
                 <li class="nav-item"><a href="#" class="nav-link excel-export "><i class="la la-file-excel-o"></i> Export Excel</a></li>
             </ul>
