--- a/fe/src/formula-editor/formula-editor.component.html
+++ b/fe/src/formula-editor/formula-editor.component.html
@@ -1,13 +1,6 @@
 <div class="formula-code-editor d-flex">
-    <button id="toggle-formula-editor" class="btn btn-secondary p-1" 
-        style="
-            background-image: url('/formuladb/img/fx_icon.png'); 
-            background-size: 22px 32px;
-            background-repeat: no-repeat;
-            background-position: center; 
-        " 
-        title="Formula Editor">
-        &nbsp;&nbsp;&nbsp;
+    <button id="toggle-formula-editor" class="btn btn-secondary p-1" title="Enable/Disable Formula Editor">
+        <i class=" frmdb-i-frmdb"></i>
     </button>
     <div class="editor">
       <textarea class="editor-textarea" readonly spellcheck="false"></textarea>
