--- a/fe/src/frmdb-editor/frmdb-editor.component.html
+++ b/fe/src/frmdb-editor/frmdb-editor.component.html
@@ -1,15 +1,87 @@
-<link rel="stylesheet" href="/formuladb-static/icons/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="/formuladb-static/icons/line-awesome/css/line-awesome.min.css">
 
-<div class="top-panel">
-    <frmdb-data-grid data-frmdb-attr="table_name:$frmdb.selectedTableId" expand_row="#edit-record-modal" no_floating_filter="true"></frmdb-data-grid>
+<div class="top-panel d-flex flex-column border-bottom border-primary shadow">
+    <frmdb-data-grid class="flex-grow-1" data-frmdb-attr="table_name:$frmdb.selectedTableId" expand_row="#edit-record-modal" no_floating_filter="true"></frmdb-data-grid>
+    <div class="flex-grow-0 d-flex">
+        <frmdb-formula-editor></frmdb-formula-editor>
+
+        <div class="btn-group mr-3" role="group">
+            <button class="btn btn-light" title="Undo (Ctrl/Cmd + Z)" id="undo-btn" data-vvveb-action="undo" data-vvveb-shortcut="ctrl+z">
+                <i class="la la-undo"></i>
+            </button>
+
+            <button class="btn btn-light" title="Redo (Ctrl/Cmd + Shift + Z)" id="redo-btn" data-vvveb-action="redo" data-vvveb-shortcut="ctrl+shift+z">
+                <i class="la la-undo la-flip-horizontal"></i>
+            </button>
+        </div>
+
+        <div class="btn-group mr-3" role="group">
+            <button class="btn btn-light" title="Preview" id="preview-btn" type="button" data-toggle="button" aria-pressed="false"
+                data-vvveb-action="preview">
+                <i class="la la-eye"></i>
+            </button>
+
+            <button class="btn btn-light" title="Fullscreen (F11)" id="fullscreen-btn" data-toggle="button" aria-pressed="false"
+                data-vvveb-action="fullscreen">
+                <i class="la la-arrows"></i>
+            </button>
+
+            <button id="table-code-editor-btn" data-view="mobile" class="d-none btn btn-sm btn-light btn-sm" title="Table Code Viewer"
+                data-vvveb-action="toggleTableEditor">
+                <i class="la la-code-fork"></i>
+            </button>
+        </div>
+
+        <div class="btn-group mr-3" role="group">
+            <button class="btn btn-light" title="Save Page" id="save-btn">
+                <i class="la la-save"></i>
+            </button>
+            <button disabled class="btn btn-light" title="Publish to live environment" id="publish-btn" data-vvveb-action="saveApp">
+                <i class="la la-upload"></i>
+            </button>
+        </div>
+
+        <div class="btn-group mr-3" role="menu">
+            <button class="btn btn-sm" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                <i class="la la-square text-success"></i>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="frmdb-editor-color-palette-select">
+            </div>
+        </div>
+        <div class="btn-group mr-3" role="menu">
+            <button class="btn btn-sm" id="frmdb-editor-i18n-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="flag-icon flag-icon-gb"></i>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="frmdb-editor-i18n-select">
+            </div>
+        </div>
+
+        <div class="btn-group" role="menu">
+            <button class="btn btn-sm dropdown-toggle" id="screen-size-dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                <i class="la la-laptop"></i>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="screen-size-dropdown-toggle">
+                <a class="dropdown-item" id="mobile-view" data-view="mobile" title="Mobile view" data-vvveb-action="viewport"
+                    onclick="$(this).closest('.btn-group').find('.dropdown-toggle i').attr('class', 'la la-mobile-phone')"><i
+                        class="la la-mobile-phone"></i> Mobile</a>
+                <a class="dropdown-item" id="tablet-view" data-view="tablet" title="Tablet view" data-vvveb-action="viewport"
+                    onclick="$(this).closest('.btn-group').find('.dropdown-toggle i').attr('class', 'la la-tablet')"><i class="la la-tablet"></i> Tablet</a>
+                <a class="dropdown-item" id="desktop-view" data-view="" title="Desktop view" data-vvveb-action="viewport"
+                    onclick="$(this).closest('.btn-group').find('.dropdown-toggle i').attr('class', 'la la-laptop')"><i class="la la-laptop"></i>
+                    Desktop</a>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="left-panel">
-    <div style="border-bottom: 1px solid #BDC3C7; background:linear-gradient(150deg,#7795f8 15%,#6772e5 70%,#555abf 94%)">
+<div class="left-panel border-right border-primary shadow">
+    <div class="d-flex justify-content-between" style="border-bottom: 1px solid #BDC3C7; background:linear-gradient(150deg,#7795f8 15%,#6772e5 70%,#555abf 94%)">
         <img src="/formuladb/img/logo.png" style="width: 110px; height: 32px;" />
-        <a class="float-right btn btn-sm btn-outline-light mx-1" href="javascript:void()" data-frmdb-action="showIntroVideoModal"><i class="fa fa-info"></i></a>
+        <a class="btn btn-sm btn-outline-light m-2" href="javascript:void(0)" data-frmdb-action="showIntroVideoModal"><i class="la la-info"></i></a>
     </div>
     <frmdb-table-list></frmdb-table-list>
-    <frmdb-pages-list></frmdb-pages-list>
+    <frmdb-page-list></frmdb-page-list>
     <frmdb-dom-tree root-element="body"></frmdb-dom-tree>
 </div>
 <frmdb-highlight-box root-element="body"></frmdb-highlight-box>
