--- a/fe/src/frmdb-editor/frmdb-editor.component.scss
+++ b/fe/src/frmdb-editor/frmdb-editor.component.scss
@@ -19,8 +19,28 @@ frmdb-dom-tree {
     height: var(--frmdb-editor-top-panel-height);
 }
 
+$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace ;
+$font-family-base:            $font-family-sans-serif;
+
+$font-size-base:              0.85rem !default; // Assumes the browser default, typically `16px`
+$font-size-lg:                $font-size-base * 1.25 !default;
+$font-size-sm:                $font-size-base * .875 !default;
+
 $spacer: 0.25rem;
+$nav-link-padding-y: .1rem !default;
+$nav-link-padding-x: .2rem !default;
 
 @import "../../../formuladb-themes/node_modules/bootstrap/scss/bootstrap";
 @import "../../../formuladb-themes/node_modules/font-awesome/scss/font-awesome.scss";
 @import "../../../formuladb-themes/frmdb/dropdown";
+
+.top-panel, .left-panel {
+    font-family: $font-family-base;
+    @include font-size($font-size-base);
+    font-weight: $font-weight-base;
+    line-height: $line-height-base;
+    color: $body-color;
+    text-align: left; // 3
+    background-color: $body-bg; // 2
+}
