--- a/fe/src/frmdb-editor/frmdb-editor.component.html
+++ b/fe/src/frmdb-editor/frmdb-editor.component.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="/formuladb-static/icons/line-awesome/css/line-awesome.min.css">
 
 <div class="top-panel d-flex flex-column border-bottom border-primary shadow">
-    <frmdb-data-grid class="flex-grow-1" data-frmdb-attr="table_name:$frmdb.selectedTableId" expand_row="#edit-record-modal" no_floating_filter="true"></frmdb-data-grid>
-    <div class="flex-grow-0 d-flex">
+    <frmdb-data-grid class="flex-grow-1" data-frmdb-attr="table-name:$frmdb.selectedTableId" expand-row="#edit-record-modal" no-floating-filters="true"></frmdb-data-grid>
+    <div class="button-bar flex-grow-0 d-flex">
         <frmdb-formula-editor></frmdb-formula-editor>
 
         <div class="btn-group mr-3" role="group">
@@ -75,13 +75,65 @@
         </div>
     </div>
 </div>
-<div class="left-panel border-right border-primary shadow">
+<div class="left-panel border-right shadow frmdb-dropdown-hover">
     <div class="d-flex justify-content-between" style="border-bottom: 1px solid #BDC3C7; background:linear-gradient(150deg,#7795f8 15%,#6772e5 70%,#555abf 94%)">
         <img src="/formuladb/img/logo.png" style="width: 110px; height: 32px;" />
         <a class="btn btn-sm btn-outline-light m-2" href="javascript:void(0)" data-frmdb-action="showIntroVideoModal"><i class="la la-info"></i></a>
     </div>
-    <frmdb-table-list></frmdb-table-list>
-    <frmdb-page-list></frmdb-page-list>
+
+    <ul class="nav flex-row pl-1">
+        <li class="nav-item">
+            <a class="nav-link disabled" href="javascript:void(0)" tabindex="-1" aria-disabled="true">Table</a>
+        </li>
+        <li class="nav-item dropdown frmdb-dropdown-hover flex-grow-1">
+            <a href="javascript:void(0)" class="nav-link dropdown-toggle text-primary text-center" aria-haspopup="true" aria-expanded="false"
+                data-frmdb-value="$frmdb.selectedTableId">
+            </a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" data-frmdb-table="$frmdb.tables[]" data-frmdb-value="$frmdb.tables[]._id" href="javascript:void(0)">table 1</a>
+            </div>
+        </li>
+        <li class="nav-item dropdown frmdb-dropdown-hover">
+            <a href="javascript:void(0)" class="nav-link" id="table-options" aria-haspopup="true" aria-expanded="false">
+                <i class="la la-ellipsis-v"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="table-options">
+                <a class="dropdown-item" id="new-table-btn" title="New Table"><i class="la la-plus-circle"></i> New Table</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" id="delete-table-btn" title="Delete Table" data-frmdb-prop="tableToDelete::$frmdb.selectedTableId"><i
+                    class="la la-trash"></i> Delete <span data-frmdb-value="$frmdb.selectedTableId"></span></a>
+            </div>
+        </li>
+    </ul>
+    
+    <ul class="nav flex-row pl-1">
+        <li class="nav-item">
+            <a class="nav-link disabled" href="javascript:void(0)" tabindex="-1" aria-disabled="true">Page</a>
+        </li>
+        <li class="nav-item dropdown flex-grow-1">
+            <input id="page-list" class="frmdb-dropdown-toggle" tabindex="-1" />
+            <label for="page-list" class="nav-link dropdown-toggle text-center" role="button" aria-haspopup="true"
+                aria-expanded="false" data-frmdb-value="$frmdb.selectedPageName">
+            </label>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" data-frmdb-table="$frmdb.pages[]" data-frmdb-value="$frmdb.pages[].name"
+                    data-frmdb-attr="href::$frmdb.pages[].url"></a>
+            </div>
+        </li>
+        <li class="nav-item dropdown">
+            <input id="page-opts" class="frmdb-dropdown-toggle" tabindex="-1" />
+            <label class="nav-link" for="page-opts" aria-haspopup="true" aria-expanded="false">
+                <i class="la la-ellipsis-v"></i>
+            </label>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="table-options">
+                <a class="dropdown-item" id="new-page-btn" title="New Page"><i class="la la-plus-circle"></i> New Page</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" id="delete-page-btn" title="Delete Page" data-frmdb-prop="pagePathToDelete::$frmdb.selectedPagePath"><i
+                        class="la la-trash"></i> Delete <span data-frmdb-value="$frmdb.selectedPageName"></span></a>
+            </div>
+        </li>
+    </ul>
+
     <frmdb-dom-tree root-element="body"></frmdb-dom-tree>
 </div>
 <frmdb-highlight-box root-element="body"></frmdb-highlight-box>
