--- a/fe/src/frmdb-editor/frmdb-editor.component.scss
+++ b/fe/src/frmdb-editor/frmdb-editor.component.scss
@@ -23,9 +23,10 @@ $font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Segoe UI", Rob
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace ;
 $font-family-base:            $font-family-sans-serif;
 
-$font-size-base:              0.85rem !default; // Assumes the browser default, typically `16px`
-$font-size-lg:                $font-size-base * 1.25 !default;
-$font-size-sm:                $font-size-base * .875 !default;
+$font-size-base:              0.75rem; // Assumes the browser default, typically `16px`
+$font-size-lg:                $font-size-base * 1.25;
+$font-size-sm:                $font-size-base * .875;
+$label-margin-bottom:         .15rem;
 
 $spacer: 0.25rem;
 $nav-link-padding-y: .1rem !default;
