page list working

--- a/fe/src/frmdb-editor/frmdb-editor.component.html
+++ b/fe/src/frmdb-editor/frmdb-editor.component.html
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <div class="btn-group" role="menu">
+        <div class="btn-group dropdown frmdb-dropdown-hover" role="menu">
             <button class="btn btn-sm dropdown-toggle" id="screen-size-dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
                 <i class="la la-laptop"></i>
@@ -110,21 +110,19 @@
         <li class="nav-item">
             <a class="nav-link disabled" href="javascript:void(0)" tabindex="-1" aria-disabled="true">Page</a>
         </li>
-        <li class="nav-item dropdown flex-grow-1">
-            <input id="page-list" class="frmdb-dropdown-toggle" tabindex="-1" />
-            <label for="page-list" class="nav-link dropdown-toggle text-center" role="button" aria-haspopup="true"
+        <li class="nav-item dropdown flex-grow-1 frmdb-dropdown-hover">
+            <a href="javascript:void(0)" class="nav-link dropdown-toggle text-center" role="button" aria-haspopup="true"
                 aria-expanded="false" data-frmdb-value="$frmdb.selectedPageName">
-            </label>
+            </a>
             <div class="dropdown-menu">
                 <a class="dropdown-item" data-frmdb-table="$frmdb.pages[]" data-frmdb-value="$frmdb.pages[].name"
                     data-frmdb-attr="href::$frmdb.pages[].url"></a>
             </div>
         </li>
-        <li class="nav-item dropdown">
-            <input id="page-opts" class="frmdb-dropdown-toggle" tabindex="-1" />
-            <label class="nav-link" for="page-opts" aria-haspopup="true" aria-expanded="false">
+        <li class="nav-item dropdown frmdb-dropdown-hover">
+            <a class="nav-link" href="javascript:void(0)" aria-haspopup="true" aria-expanded="false">
                 <i class="la la-ellipsis-v"></i>
-            </label>
+            </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="table-options">
                 <a class="dropdown-item" id="new-page-btn" title="New Page"><i class="la la-plus-circle"></i> New Page</a>
                 <div class="dropdown-divider"></div>
