--- a/fe/src/frmdb-editor/frmdb-editor.component.scss
+++ b/fe/src/frmdb-editor/frmdb-editor.component.scss
@@ -4,6 +4,7 @@
     left: 0;
     width: var(--frmdb-editor-left-panel-width);
     height: 100vh;
+    z-index: 45679;
 }
 
 frmdb-dom-tree {
@@ -17,6 +18,7 @@ frmdb-dom-tree {
     left: var(--frmdb-editor-left-panel-width);
     width: calc(100vw - var(--frmdb-editor-left-panel-width) - 17px);
     height: var(--frmdb-editor-top-panel-height);
+    z-index: 45678;
 }
 
 $font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
