--- a/fe/src/frmdb-editor/frmdb-editor.component.html
+++ b/fe/src/frmdb-editor/frmdb-editor.component.html
@@ -1,33 +1,32 @@
 <link rel="stylesheet" href="/formuladb-static/icons/line-awesome/css/line-awesome.min.css">
 
 <div class="top-panel d-flex flex-column border-bottom border-primary shadow">
-    <frmdb-data-grid class="flex-grow-1" data-frmdb-attr="table-name:$frmdb.selectedTableId" expand-row="#edit-record-modal" no-floating-filters="true"></frmdb-data-grid>
+    <frmdb-data-grid class="flex-grow-1" data-frmdb-attr="table-name:$frmdb.selectedTableId" expand-row="#edit-record-modal" no-floating-filters="true">
+    </frmdb-data-grid>
     <div class="button-bar flex-grow-0 d-flex">
         <frmdb-formula-editor></frmdb-formula-editor>
 
         <div class="btn-group mr-3" role="group">
-            <button class="btn btn-light" title="Undo (Ctrl/Cmd + Z)" id="undo-btn" data-vvveb-action="undo" data-vvveb-shortcut="ctrl+z">
+            <button class="btn btn-light" title="Undo (Ctrl/Cmd + Z)" id="undo-btn" data-frmdb-action="undo" data-vvveb-shortcut="ctrl+z">
                 <i class="la la-undo"></i>
             </button>
 
-            <button class="btn btn-light" title="Redo (Ctrl/Cmd + Shift + Z)" id="redo-btn" data-vvveb-action="redo" data-vvveb-shortcut="ctrl+shift+z">
+            <button class="btn btn-light" title="Redo (Ctrl/Cmd + Shift + Z)" id="redo-btn" data-frmdb-action="redo" data-vvveb-shortcut="ctrl+shift+z">
                 <i class="la la-undo la-flip-horizontal"></i>
             </button>
         </div>
 
         <div class="btn-group mr-3" role="group">
-            <button class="btn btn-light" title="Preview" id="preview-btn" type="button" data-toggle="button" aria-pressed="false"
-                data-vvveb-action="preview">
+            <button class="btn btn-light" title="Preview" id="preview-btn" type="button" data-toggle="button" aria-pressed="false" data-frmdb-action="preview">
                 <i class="la la-eye"></i>
             </button>
 
-            <button class="btn btn-light" title="Fullscreen (F11)" id="fullscreen-btn" data-toggle="button" aria-pressed="false"
-                data-vvveb-action="fullscreen">
+            <button class="btn btn-light" title="Fullscreen (F11)" id="fullscreen-btn" data-toggle="button" aria-pressed="false" data-frmdb-action="fullscreen">
                 <i class="la la-arrows"></i>
             </button>
 
             <button id="table-code-editor-btn" data-view="mobile" class="d-none btn btn-sm btn-light btn-sm" title="Table Code Viewer"
-                data-vvveb-action="toggleTableEditor">
+                data-frmdb-action="toggleTableEditor">
                 <i class="la la-code-fork"></i>
             </button>
         </div>
@@ -36,14 +35,13 @@
             <button class="btn btn-light" title="Save Page" id="save-btn">
                 <i class="la la-save"></i>
             </button>
-            <button disabled class="btn btn-light" title="Publish to live environment" id="publish-btn" data-vvveb-action="saveApp">
+            <button disabled class="btn btn-light" title="Publish to live environment" id="publish-btn" data-frmdb-action="saveApp">
                 <i class="la la-upload"></i>
             </button>
         </div>
 
         <div class="btn-group mr-3" role="menu">
-            <button class="btn btn-sm" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">
+            <button class="btn btn-sm" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="la la-square text-success"></i>
             </button>
             <div class="dropdown-menu" aria-labelledby="frmdb-editor-color-palette-select">
@@ -57,26 +55,22 @@
             </div>
         </div>
 
-        <div class="btn-group dropdown frmdb-dropdown-hover" role="menu">
+        <div class="btn-group dropdown frmdb-dropdown-hover" data-frmdb-select="i" role="menu">
             <button class="btn btn-sm dropdown-toggle" id="screen-size-dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
                 <i class="la la-laptop"></i>
             </button>
             <div class="dropdown-menu" aria-labelledby="screen-size-dropdown-toggle">
-                <a class="dropdown-item" id="mobile-view" data-view="mobile" title="Mobile view" data-vvveb-action="viewport"
-                    onclick="$(this).closest('.btn-group').find('.dropdown-toggle i').attr('class', 'la la-mobile-phone')"><i
-                        class="la la-mobile-phone"></i> Mobile</a>
-                <a class="dropdown-item" id="tablet-view" data-view="tablet" title="Tablet view" data-vvveb-action="viewport"
-                    onclick="$(this).closest('.btn-group').find('.dropdown-toggle i').attr('class', 'la la-tablet')"><i class="la la-tablet"></i> Tablet</a>
-                <a class="dropdown-item" id="desktop-view" data-view="" title="Desktop view" data-vvveb-action="viewport"
-                    onclick="$(this).closest('.btn-group').find('.dropdown-toggle i').attr('class', 'la la-laptop')"><i class="la la-laptop"></i>
-                    Desktop</a>
+                <a class="dropdown-item" title="Mobile view" data-frmdb-action="viewport-mobile"><i class=" la la-mobile-phone"></i> Mobile</a>
+                <a class="dropdown-item" title="Tablet view" data-frmdb-action="viewport-tablet"><i class="la la-tablet"></i> Tablet</a>
+                <a class="dropdown-item" title="Desktop view" data-frmdb-action="viewport-laptop"><i class="la la-laptop"></i> Desktop</a>
             </div>
         </div>
     </div>
 </div>
 <div class="left-panel border-right shadow frmdb-dropdown-hover">
-    <div class="d-flex justify-content-between" style="border-bottom: 1px solid #BDC3C7; background:linear-gradient(150deg,#7795f8 15%,#6772e5 70%,#555abf 94%)">
+    <div class="d-flex justify-content-between"
+        style="border-bottom: 1px solid #BDC3C7; background:linear-gradient(150deg,#7795f8 15%,#6772e5 70%,#555abf 94%)">
         <img src="/formuladb/img/logo.png" style="width: 110px; height: 32px;" />
         <a class="btn btn-sm btn-outline-light m-2" href="javascript:void(0)" data-frmdb-action="showIntroVideoModal"><i class="la la-info"></i></a>
     </div>
@@ -101,18 +95,18 @@
                 <a class="dropdown-item" id="new-table-btn" title="New Table"><i class="la la-plus-circle"></i> New Table</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" id="delete-table-btn" title="Delete Table" data-frmdb-prop="tableToDelete::$frmdb.selectedTableId"><i
-                    class="la la-trash"></i> Delete <span data-frmdb-value="$frmdb.selectedTableId"></span></a>
+                        class="la la-trash"></i> Delete <span data-frmdb-value="$frmdb.selectedTableId"></span></a>
             </div>
         </li>
     </ul>
-    
+
     <ul class="nav flex-row pl-1">
         <li class="nav-item">
             <a class="nav-link disabled" href="javascript:void(0)" tabindex="-1" aria-disabled="true">Page</a>
         </li>
         <li class="nav-item dropdown flex-grow-1 frmdb-dropdown-hover">
-            <a href="javascript:void(0)" class="nav-link dropdown-toggle text-center" role="button" aria-haspopup="true"
-                aria-expanded="false" data-frmdb-value="$frmdb.selectedPageName">
+            <a href="javascript:void(0)" class="nav-link dropdown-toggle text-center" role="button" aria-haspopup="true" aria-expanded="false"
+                data-frmdb-value="$frmdb.selectedPageName">
             </a>
             <div class="dropdown-menu">
                 <a class="dropdown-item" data-frmdb-table="$frmdb.pages[]" data-frmdb-value="$frmdb.pages[].name"
@@ -134,4 +128,4 @@
 
     <frmdb-dom-tree root-element="body"></frmdb-dom-tree>
 </div>
-<frmdb-highlight-box root-element="body"></frmdb-highlight-box>
+<iframe id="canvas"></iframe>
