more work on component editor

--- a/fe/src/dom-tree/dom-tree.component.scss
+++ b/fe/src/dom-tree/dom-tree.component.scss
@@ -44,12 +44,25 @@
   .ag-row-drag {
     min-width: 16px;
   }
-
   .ag-row-group-indent-1 {
     padding-left: 5px;
   }
-  
   .ag-row-group-indent-2 {
     padding-left: 10px;
   }  
+  .ag-row-group-indent-3 {
+    padding-left: 15px;
+  }  
+  .ag-row-group-indent-4 {
+    padding-left: 20px;
+  }  
+  .ag-row-group-indent-5 {
+    padding-left: 25px;
+  }  
+  .ag-row-group-indent-6 {
+    padding-left: 30px;
+  }
+  .ag-row-group-indent-7 {
+    padding-left: 35px;
+  }
 }
