--- a/fe/src/frmdb-editor/frmdb-editor.directive.scss
+++ b/fe/src/frmdb-editor/frmdb-editor.directive.scss
@@ -1,3 +1,8 @@
+body {
+    --frmdb-editor-top-panel-height: 30vh;
+    --frmdb-editor-left-panel-width: 15vw;
+}
+
 .left-panel {
     position: fixed;
     top: 0;
@@ -24,6 +29,7 @@
     height: calc(100vh - var(--frmdb-editor-top-panel-height));
     margin: 0;
     padding: 0;
+
     iframe {
         width: 100%;
         height: 100%;
@@ -39,7 +45,7 @@ $font-size-lg:                $font-size-base * 1.25;
 $font-size-sm:                $font-size-base * .875;
 $label-margin-bottom:         .15rem;
 
-$spacer: 0.25rem;
+$spacer: 0.5rem;
 $nav-link-padding-y: .1rem !default;
 $nav-link-padding-x: .2rem !default;
 
