--- a/fe/src/theme-customizer/theme-customizer.component.html
+++ b/fe/src/theme-customizer/theme-customizer.component.html
@@ -15,9 +15,9 @@
         <button class="btn" id="frmdb-editor-theme-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="la la-image"></i>
         </button>
-        <div class="dropdown-menu dropdown-menu-right" style="width: 75vw" aria-labelledby="frmdb-editor-theme-select">
-            <div class="card-deck frmdb-cards-wrap-3" style="transform: scale(0.75);">
-                <frmdb-theme-preview class="dropdown-item card p-2 m-2" data-frmdb-table="themes[]" data-frmdb-attr="color::selectedColor.attr" data-frmdb-attr2="theme::themes[]"></frmdb-theme-preview>
+        <div class="dropdown-menu dropdown-menu-right" style="width: 70vw;" aria-labelledby="frmdb-editor-theme-select">
+            <div class="card-deck frmdb-cards-wrap-3">
+                <frmdb-theme-preview class="dropdown-item card p-2 m-2" style="transform: scale(0.85);" data-frmdb-table="themes[]" data-frmdb-attr="color::selectedColor.attr" data-frmdb-attr2="theme::themes[]"></frmdb-theme-preview>
             </div>
         </div>
     </div>
